--- a/Dance_Tutor/Dance_Tutor.csproj
+++ b/Dance_Tutor/Dance_Tutor.csproj
@@ -95,6 +95,7 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\CharController.cs" />
     <Compile Include="Assets\Scripts\JointAndreas.cs" />
+    <Compile Include="Assets\Scripts\MathHelper.cs" />
     <Compile Include="Assets\Scripts\Old\BVHLoader.cs" />
     <Compile Include="Assets\Scripts\Old\BVHLoaderAndreas.cs" />
     <Compile Include="Assets\Scripts\Old\DanceE_Learning.cs" />
