--- a/Dance_Tutor/Dance_Tutor.csproj
+++ b/Dance_Tutor/Dance_Tutor.csproj
@@ -508,15 +508,19 @@
     <Compile Include="Assets\_OtherAssets\Kinect-v2-with-MS-SDK-v2.16.0\Standard Assets\Windows\Kinect\TrackingConfidence.cs" />
     <Compile Include="Assets\_OtherAssets\Kinect-v2-with-MS-SDK-v2.16.0\Standard Assets\Windows\Kinect\TrackingState.cs" />
     <Compile Include="Assets\_OtherAssets\Kinect-v2-with-MS-SDK-v2.16.0\Standard Assets\Windows\Kinect\Vector4.cs" />
-    <Compile Include="Assets\Scripts\CharController.cs" />
-    <Compile Include="Assets\Scripts\DataEditor.cs" />
-    <Compile Include="Assets\Scripts\GameManager.cs" />
-    <Compile Include="Assets\Scripts\GeneralGestureListener.cs" />
-    <Compile Include="Assets\Scripts\Joint.cs" />
-    <Compile Include="Assets\Scripts\MathHelper.cs" />
-    <Compile Include="Assets\Scripts\MyStreamingGraph.cs" />
-    <Compile Include="Assets\Scripts\Skeleton.cs" />
-    <Compile Include="Assets\Scripts\WordsManager.cs" />
+    <Compile Include="Assets\Scripts\Data\DanceHistory.cs" />
+    <Compile Include="Assets\Scripts\Data\DataEditor.cs" />
+    <Compile Include="Assets\Scripts\Data\User.cs" />
+    <Compile Include="Assets\Scripts\Gameplay\CharController.cs" />
+    <Compile Include="Assets\Scripts\Gameplay\GameManager.cs" />
+    <Compile Include="Assets\Scripts\Gameplay\GeneralGestureListener.cs" />
+    <Compile Include="Assets\Scripts\Gameplay\Joint.cs" />
+    <Compile Include="Assets\Scripts\Gameplay\MathHelper.cs" />
+    <Compile Include="Assets\Scripts\Gameplay\MyStreamingGraph.cs" />
+    <Compile Include="Assets\Scripts\Gameplay\Skeleton.cs" />
+    <Compile Include="Assets\Scripts\Gameplay\WordsManager.cs" />
+    <Compile Include="Assets\Scripts\MainMenu\MainMenuController.cs" />
+    <Compile Include="Assets\Scripts\UserUIComponentController.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\StreamingAssets\results.txt" />
