--- a/Dance_Tutor/Dance_Tutor.csproj
+++ b/Dance_Tutor/Dance_Tutor.csproj
@@ -520,7 +520,7 @@
     <Compile Include="Assets\Scripts\Gameplay\Skeleton.cs" />
     <Compile Include="Assets\Scripts\Gameplay\WordsManager.cs" />
     <Compile Include="Assets\Scripts\MainMenu\MainMenuController.cs" />
-    <Compile Include="Assets\Scripts\UserUIComponentController.cs" />
+    <Compile Include="Assets\Scripts\MainMenu\UserUIComponentController.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\StreamingAssets\results.txt" />
