--- a/Dance_Tutor/Dance_Tutor.csproj
+++ b/Dance_Tutor/Dance_Tutor.csproj
@@ -520,6 +520,7 @@
     <Compile Include="Assets\Scripts\Gameplay\Skeleton.cs" />
     <Compile Include="Assets\Scripts\Gameplay\UIAvatarController.cs" />
     <Compile Include="Assets\Scripts\Gameplay\WordsManager.cs" />
+    <Compile Include="Assets\Scripts\Gameplay\WordsManagerWithSync.cs" />
     <Compile Include="Assets\Scripts\MainMenu\MainMenuController.cs" />
     <Compile Include="Assets\Scripts\MainMenu\UserUIComponentController.cs" />
     <Compile Include="Assets\Scripts\SelectAnimationClip\SelectAnimationClipController.cs" />
