add custom inspector, add chooses between sync of animation or not, parallel move of sync windows, selected frame put it on start, middle or end of motion&style words etc., and fix some errors on word manager

--- a/Dance_Tutor/Dance_Tutor.Editor.csproj
+++ b/Dance_Tutor/Dance_Tutor.Editor.csproj
@@ -192,6 +192,7 @@
     <Compile Include="Assets\_OtherAssets\Chart and Graph\Editor\RenameWindow.cs" />
     <Compile Include="Assets\_OtherAssets\Kinect-v2-with-MS-SDK-v2.16.0\Standard Assets\Editor\KinectCopyPluginDataHelper.cs" />
     <Compile Include="Assets\_OtherAssets\Kinect-v2-with-MS-SDK-v2.16.0\Standard Assets\Editor\KinectFacePostBuildCopyPluginData.cs" />
+    <Compile Include="Assets\Editor\WordManagerEditor.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\StreamingAssets\results.txt" />
