--- a/Dance_Tutor/Dance_Tutor.csproj
+++ b/Dance_Tutor/Dance_Tutor.csproj
@@ -527,6 +527,9 @@
     <Compile Include="Assets\Scripts\Gameplay\WordsManagerWithSync.cs" />
     <Compile Include="Assets\Scripts\MainMenu\MainMenuController.cs" />
     <Compile Include="Assets\Scripts\MainMenu\UserUIComponentController.cs" />
+    <Compile Include="Assets\Scripts\ReportScene\ReportAvatarController.cs" />
+    <Compile Include="Assets\Scripts\ReportScene\ReportSceneManager.cs" />
+    <Compile Include="Assets\Scripts\ReportScene\ScreenShotsController.cs" />
     <Compile Include="Assets\Scripts\SelectAnimationClip\SelectAnimationClipController.cs" />
     <Compile Include="Assets\Scripts\SelectAnimationClip\SelectAnimationSceneController.cs" />
     <Compile Include="Assets\Scripts\SelectAnimationClip\SelectionFlagController.cs" />
