Finish Report Scene

--- a/Dance_Tutor/Dance_Tutor.csproj
+++ b/Dance_Tutor/Dance_Tutor.csproj
@@ -522,6 +522,7 @@
     <Compile Include="Assets\Scripts\Gameplay\MyStreamingGraph.cs" />
     <Compile Include="Assets\Scripts\Gameplay\Skeleton.cs" />
     <Compile Include="Assets\Scripts\Gameplay\UIAvatarController.cs" />
+    <Compile Include="Assets\Scripts\Gameplay\UIAvatarControllerReport.cs" />
     <Compile Include="Assets\Scripts\Gameplay\UIFeedBackResultManager.cs" />
     <Compile Include="Assets\Scripts\Gameplay\WordsManager.cs" />
     <Compile Include="Assets\Scripts\Gameplay\WordsManagerWithSync.cs" />
